--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   Net-IMAP-Simple-1.2023.tar.gz: 9dabf28adeb2d19ab200fe0fe2c4e41bffd920a6
-sources:
   Net-IMAP-Simple-1.2200.tar.gz: 7702ea538ab58d923b8e9edf313602e03c803b05
+sources:
+  Net-IMAP-Simple-1.2203.tar.gz: 5864ed965d24f485422469ae8fea28c4fc596b27
